// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing component given a valid default theme is provided when a "margin" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginBottom" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginLeft" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginRight" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginTop" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginX" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginY" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "padding" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingBottom" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingLeft" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingRight" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingTop" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingX" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingY" prop is provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a \`div\` is provided as component should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when a \`span\` is provided as a component should render correctly 1`] = `
<span
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given a valid default theme is provided when no props are provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;

exports[`Spacing component given no default theme is provided when no props are provided should render correctly 1`] = `
<div
  className="MuiBox-root MuiBox-root-3 NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;
